feat: 修改一些变量名

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
   <div id="enlargeScale">放大</div>
   <div id="narrowScale">缩小</div>
-  <div id="damping" class="switch switch-open"></div>
+  <div id="damping" class="switch"></div>
   <div id="perspective" class="switch"></div>
   <div class="switch-label damping-label">阻尼感?</div>
   <div class="switch-label perspective-label">透视感?</div>
@@ -107,7 +107,7 @@
         this.store = {
           x: 0,
           y: 0,
-          scale: 1
+          distance: 1
         }
         // 触摸的类型
         this.touchType = ''
@@ -127,24 +127,24 @@
       }
       touchstart (e) {
         e.preventDefault();
-        if (e.touches.length === 1) {
+        if (e.targetTouches.length === 1) {
           // 当前屏幕上只有一个触摸点的时候就是移动
-          this.moveStart(e.touches[0].clientX, e.touches[0].clientY);
+          this.moveStart(e.targetTouches[0].clientX, e.targetTouches[0].clientY);
           this.touchType = "move";
-        } else if (e.touches.length === 2) {
+        } else if (e.targetTouches.length === 2) {
           // 如果两个触摸点是缩放
-          this.scaleStart(e.touches);
+          this.scaleStart(e.targetTouches);
           this.touchType = "scale";
         }
       }
       touchmove (e) {
         e.preventDefault();
-        if (e.touches.length === 1 && this.touchType === "move") {
+        if (e.targetTouches.length === 1 && this.touchType === "move") {
           // 如果屏幕上只有一个触摸点而且类型是移动的时候才是移动
-          this.move(e.touches[0].clientX, e.touches[0].clientY);
-        } else if (e.touches.length === 2) {
+          this.move(e.targetTouches[0].clientX, e.targetTouches[0].clientY);
+        } else if (e.targetTouches.length === 2) {
           // 只要有两个触摸点就是缩放,可以从移动转换成缩放
-          this.scale(e.touches);
+          this.scale(e.targetTouches);
         }
       }
       // 开始移动的方法: 记录首次的数据
@@ -165,7 +165,7 @@
         // 算出当前两指之间的距离
         const x = touchList[0].clientX - touchList[1].clientX;
         const y = touchList[0].clientY - touchList[1].clientY;
-        this.store.scale = Math.sqrt(x ** 2 + y ** 2);
+        this.store.distance = Math.sqrt(x ** 2 + y ** 2);
         // 缩放中心为双指点的中心,此时的双指中心只是touchBox上的,得转换成transformDom上的,
         // 因为缩放中心的位置带来translate的变化,是根据当前触摸中心在transformDom上的比例算出来的
         const scaleCenter = [
@@ -187,19 +187,19 @@
           return
         }
         // 算出当前两指的距离
-        const scale = Math.sqrt(
+        const distance = Math.sqrt(
           (touchList[0].clientX - touchList[1].clientX) ** 2 +
             (touchList[0].clientY - touchList[1].clientY) ** 2
         );
         // 缩放大小为现在的两指距离除去上次的两指距离
-        this.doscale(scale / this.store.scale, false)
+        this.doscale(distance / this.store.distance, false)
         // 记录这一次两指距离
-        this.store.scale = scale;
+        this.store.distance = distance;
       }
       // 进行指定大小的缩放
-      doscale (size, useCenter = true) {
+      doscale (scale, useCenter = true) {
         // 为0或者为1就不进行缩放
-        if (size === 0 && size === 1) return
+        if (scale === 0 && scale === 1) return
         // 缩放前的transformDom大小
         const oldSize = [
           this.transformDom.offsetWidth * this.transformData.scale,
@@ -223,14 +223,14 @@
         // 变化大小其实就是缩放的大小乘原来的大小
         this.transformData.x +=
           oldSize[0] *
-          (1 - size) *
+          (1 - scale) *
           scaleTranslateProportion[0] || 0;
         this.transformData.y +=
           oldSize[1] *
-          (1 - size) *
+          (1 - scale) *
           scaleTranslateProportion[1] || 0;
         // 设置缩放
-        this.transformData.scale *= size
+        this.transformData.scale *= scale
         this.setTransform();
       }
       // 更改移动缩放的效果
@@ -269,7 +269,7 @@
         this.store = {
           x: 0,
           y: 0,
-          scale: 0,
+          distance: 0,
         }
         this.touchType = ''
         if (this.transformData.scale > this.maxScale) {
