--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
 2.缩放大小的限制
 3.缩放中心
 4.先缩放后移动和先移动后缩放问题,两个坐标,外部容器坐标和内部元素坐标
+  transform先移动后缩放其实是我们理解的先缩放后移动
 5.targetTouches Touches changeTouches 区别(可以不讲)
   targetTouches点到里面的元素会有问题?
 6.控件z轴位移
